--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "dev": "npm run serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -12,6 +13,7 @@
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vue-router-layout": "^0.1.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -28,6 +30,8 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "tailwindcss": "^1.0.1",
+    "vue-auto-routing": "^0.3.0",
+    "vue-cli-plugin-auto-routing": "^0.2.1",
     "vue-template-compiler": "^2.6.10"
   }
 }
