--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "build:deploy": "npm run build && npm run gh-pages",
     "dev": "npm run serve",
-    "gh-pages": "vue-cli-service gh-pages",
-    "build:deploy": "npm run build && npm run gh-pages"
+    "gh-pages": "vue-cli-service gh-pages"
   },
   "dependencies": {
+    "ant-design-vue": "^1.2.4",
     "core-js": "^2.6.5",
     "faker": "https://github.com/Marak/faker.js",
     "register-service-worker": "^1.6.2",
-    "v-calendar": "https://github.com/dewdad/v-calendar.git#next",
+    "v-calendar": "next",
     "vue": "^2.6.10",
+    "vue-check-view": "^0.3.0",
     "vue-router": "^3.0.3",
     "vue-router-layout": "^0.1.2",
+    "vue-waypoint": "^3.2.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -28,13 +31,17 @@
     "@vue/cli-plugin-pwa": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-import": "^1.11.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "less": "^2.7.3",
+    "less-loader": "^4.1.0",
     "postcss-preset-env": "^6.6.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "tailwindcss": "^1.0.1",
     "vue-auto-routing": "^0.3.0",
+    "vue-cli-plugin-antv": "^1.1.1",
     "vue-cli-plugin-auto-routing": "^0.2.1",
     "vue-cli-plugin-gh-pages": "^0.4.0",
     "vue-template-compiler": "^2.6.10"
