--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ant-design-vue": "^1.2.4",
     "core-js": "^2.6.5",
     "faker": "https://github.com/Marak/faker.js",
+    "lodash": "^4.17.11",
     "register-service-worker": "^1.6.2",
     "v-calendar": "next",
     "vue": "^2.6.10",
